client/src/index.css
/* Theme colors */
:root {
  --dark-accent: #8c6797;
  --dark-bg: #1d284e;
  --light-bg: #f5f4ee;
  --primary: #8722ed;
}

* {
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  background-color: var(--primary);
  border: none;
  border-radius: 5px;
  color: white;
  padding: 12px 32px;
  transition: all 0.2s;
}

button:hover,
button:active,
button:focus {
  background-color: #4a1284;
  cursor: pointer;
}

footer {
  background-color: var(--light-bg);
  bottom: 0;
  color: var(--primary);
  height: 50px;
  padding: 15px;
  position: fixed;
  text-align: center;
  width: 100%;
}

form {
  display: flex;
  flex-direction: column;
}

form * {
  margin-top: 15px;
}

input,
select {
  padding: 15px;
}

header {
  background-color: var(--light-bg);
  color: var(--primary);
  height: 50px;
  padding: 15px;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  z-index: 9999;
}

main {
  background-color: var(--dark-bg);
  margin-bottom: 50px;
  min-height: calc(100vh - 100px);
  padding: 15px;
}

main h1,
main h2 {
  color: var(--primary);
}

.accountHeading {
  align-items: center;
  display: flex;
}

h1,
.accountNameUpdateInput {
  color: var(--primary);
  margin: 0;
  padding: 0;
  font-size: 2em;
  font-weight: bold;
}

.accountNameUpdateInput {
  background-color: rgba(0, 0, 0, 0.5);
  border: none;
  border-bottom: 2px solid var(--primary);
}

.accountNameUpdateInput:focus {
  outline: none;
}

.accounts {
  display: flex;
  flex-wrap: wrap;
  margin-top: 25px;
}

.amountInputWithIcon {
  display: flex;
  align-items: center;
  margin: 0;
}
.amountInputWithIcon svg {
  margin-right: 10px;
}
.amountInputWithIcon input {
  flex-grow: 1;
}

.btn {
  color: var(--primary);
  cursor: pointer;
  margin: 0 10px;
}

.btnGroup {
  display: flex;
  justify-content: space-between;
}

.btnGroup button,
.btnGroup a button {
  width: 47.5%;
}

.card {
  background-color: var(--light-bg);
  border-radius: 15px;
  color: var(--dark-accent);
  height: 250px;
  margin: 0 25px 25px 0;
  transition: all 0.2s;
  width: 250px;
}

.card:hover,
.card:active,
.card:focus {
  box-shadow: 0 0 10px var(--primary);
  transform: scale(110%);
}

.card main {
  background-color: var(--light-bg);
  margin-bottom: 0;
  min-height: 50%;
  padding: 15px;
}

.card main h2 {
  color: var(--dark-accent);
}

.card footer {
  border-radius: 0 0 15px 15px;
  color: var(--dark-accent);
  min-height: 25%;
  padding: 15px 0;
  position: relative;
  text-align: center;
}

.card header {
  background-color: var(--primary);
  border-radius: 15px 15px 0 0;
  color: white;
  min-height: 25%;
  padding: 15px 0;
  position: relative;
  text-align: center;
  z-index: 0;
}

.card header h2 {
  color: white;
  font-weight: normal;
}

.hidden {
  display: none;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.5);
  height: 100%;
  left: 0;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.transactionCard,
.transactionListHeader {
  background-color: var(--light-bg);
  border-bottom: 3px solid var(--primary);
  display: flex;
  justify-content: space-between;
  padding: 15px;
}
.transactionCard *,
.transactionListHeader * {
  flex-basis: calc(100% / 7);
  height: 35px;
  padding: 5px;
  text-align: left;
}

.transactions {
  display: flex;
  flex-direction: column;
  margin: 15px 0;
}

#addAccountBtn {
  background-color: transparent;
  border: 5px dashed var(--primary);
  border-radius: 15px;
  color: var(--primary);
  font-size: 2em;
  height: 250px;
  margin: 0 25px 25px 0;
  padding: 15px;
  width: 250px;
}

#addAccountBtn:hover,
#addAccountBtn:active,
#addAccountBtn:focus {
  background-color: rgba(255, 255, 255, 0.2);
}

#brand {
  color: var(--primary);
}

#modal {
  background-color: var(--light-bg);
  border-radius: 15px;
  margin: 100px auto;
  padding: 15px;
  width: 80%;
  /* z-index: 9999; */
}

@media screen and (min-width: 768px) {
  #modal {
    width: 50%;
  }
}

